# docs/swagger.json
@@ -70,6 +70,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add a new food",
                 "consumes": [
                     "application/json"
@@ -162,6 +167,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update a food",
                 "consumes": [
                     "application/json"
@@ -431,11 +441,6 @@
         },
         "/menus": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Retrieve a paginated list of all menus",
                 "consumes": [
                     "application/json"
@@ -535,11 +540,6 @@
         },
         "/menus/{menu_id}": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Retrieve a specific menu by menu_id",
                 "consumes": [
                     "application/json"
@@ -1294,11 +1294,6 @@
         },
         "/tables": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Retrieve a paginated list of all tables",
                 "consumes": [
                     "application/json"
@@ -2109,7 +2104,7 @@
                 },
                 "role": {
                     "type": "string",
-                    "example": "ADMIN"
+                    "example": "admin"
                 },
                 "token": {
                     "type": "string",
